# Sigurd

./: .gitignore  Cargo.toml  README.md
auto/: Cargo.toml
auto/src/: main.rs
base/: Cargo.toml  README.md
base/src/: lib.rs  main.rs
cashier/: .gitignore  Cargo.toml  log
cashier/src/: main.rs  product.rs
fantoccini/: Cargo.toml
fantoccini/src/: main.rs
msg/: Cargo.toml
src/: lib.rs  main.rs
tool/: Cargo.toml  build.rs
tool/src/: main.rs
