[package]
name = "auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# headless_chrome = "0.9.0" 
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
failure = "0.1.8"
image = "0.24.3"